--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "type": "module",
   "devDependencies": {
     "@iconify/json": "^2.2.271",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@types/bun": "latest",
     "@unocss/postcss": "^0.64.0",
     "@unocss/preset-attributify": "^0.64.0",
+    "drizzle-orm": "^0.36.1",
+    "drizzle-typebox": "^0.1.1",
     "unocss": "^0.64.0",
     "vitepress": "^1.5.0"
   },
