--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "devDependencies": {
     "@iconify/json": "^2.2.271",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@shikijs/vitepress-twoslash": "^1.22.2",
     "@types/bun": "latest",
-    "@unocss/postcss": "^0.64.0",
-    "@unocss/preset-attributify": "^0.64.0",
     "drizzle-orm": "^0.36.1",
     "drizzle-typebox": "^0.1.1",
-    "@shikijs/vitepress-twoslash": "^1.22.2",
     "vitepress": "^1.5.0"
   },
   "peerDependencies": {
@@ -22,8 +20,12 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "^10.4.20",
     "daisyui": "^3.0.0",
-    "unocss": "^0.64.0",
-    "unocss-preset-daisy": "^7.0.0"
+    "postcss": "^8.4.49",
+    "postcss-nesting": "^13.0.1",
+    "postcss-preset-env": "^10.1.0",
+    "tailwindcss": "^3.4.14"
   }
 }
